name:                imager3000
version:             0.1.0.0
synopsis:            Concurrent image scrapper.
description:         Please see README.md
homepage:            http://github.com/BsAsHaskell/imager3000
license:             BSD3
license-file:        LICENSE
author:              BAHM
maintainer:          example@example.com
copyright:           2010 BAHM
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable imager3000
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Imager3000.Fetch
                     , Imager3000.Parse
                     , Imager3000.Download
                     , Imager3000.Types
                     , Imager3000.Concurrent.MVar
                     , Imager3000.Concurrent.Async
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , bytestring
                     , unordered-containers
                     , async-pool
                     , network-uri
                     , http-client
                     , taggy
  default-language:    Haskell2010
